<resources>
    <string name="app_name">Scanner</string>
    <string name="scan">սկան</string>
    <string name="barcode">շտրիխ</string>
    <string name="Barcode">Շտրիխ</string>
    <string name="count">քանակ(սկզբնական-1)</string>
    <string name="add">ավելացնել</string>
    <string name="art">Արտիկուլ</string>
    <string name="code">Կոդ</string>
    <string name="Code">կոդ</string>
    <string name="Add">ավելացնել</string>
    <string name="Clear">մաքրել</string>
    <string name="name">անուն</string>
    <string name="count_count_base">առկա/բազա</string>
    <string name="price">Գին</string>
    <string name="info">Կոդ"\n""\n"Քանակ</string>
    <string name="file_name">փաստաթղթի համար</string>
    <string name="terminal">Տեռմինալ համար...</string>
    <string name="input">Մուտքագրել</string>
    <string name="Zero">զրոյացնել</string>
    <string name="print">Տպել</string>
    <string name="fillin">Լրացրեք բաց թողնված դաշտերը</string>

</resources>