<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.asus.myapplication.MainActivity"
    android:weightSum="1">


    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"

        android:orientation="horizontal"
        android:layout_weight="0.09">

        <RadioButton
            android:id="@+id/radio_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:onClick="onRadioButtonChecked"
            android:text="@string/code"
            android:textSize="15sp"


            />

        <RadioButton
            android:id="@+id/radio_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonChecked"
            android:text="@string/art"
            android:textSize="15sp"


            />

        <RadioButton

            android:id="@+id/radio_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonChecked"
            android:text="@string/Barcode"
            android:textSize="15sp"

            />
    </RadioGroup>

    <EditText
        android:id="@+id/barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:hint="@string/barcode" />

    <EditText
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/count"
        android:maxLines="1"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_weight="0.56">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borders_blue"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/info"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borders_blue"
                android:textColor="#ffffff"
                android:gravity="right|center"
                android:id="@+id/results"
                android:paddingRight="5dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/borders"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:gravity="left|center"
                    android:layout_marginLeft="5dp"
                    android:textSize="25sp"
                    android:textColor="#000000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="#000000"
                android:id="@+id/price_text"
                android:layout_marginRight="5dp"
                android:gravity="right|center"/>

            </LinearLayout>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/borders"
                android:textColor="#000000"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>